methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:4: error: not found: value brushUP
    right() ;forward();brushDown();brushUP();backward()
                                   ^