methods.picture.PictureMono1.scala.code
override def run() {
  def makeV() {
    left();forward();brushDown();brushUp();backward()
    right() ;forward();brushDown();brushUP();backward()
    right();forward();brushDown();brushUp();backward()
  }
  forward(3);left();makeV()
  left();forward(3);right();forward(3);right();makeV()
  left();forward(3);right();forward(3);right();makeV()
  left();forward(3);right();forward(3);right();makeV()
  left();forward(3);right()
  
  
}